--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,6 +2,7 @@ body {
 	--main-color: #2787d6;
 	--main-second-color: #4899db;
 	--main-third-color: #fff;
+	--scroll-color: #d47f00;
 	--button-color: #ff9601;
 	--button-border-color: #d47f00;
 	--hover-color: #d47f00;
