--- a/src/pages/mainPage/mainPage.css
+++ b/src/pages/mainPage/mainPage.css
@@ -10,7 +10,7 @@
 	grid-template-columns: 400px;
 }
 .leftContent {
-	/* height: calc(100vh - 90px); */
+	height: calc(100vh - 80px);
 	display: flex;
 	flex-direction: column;
 }
